# Secret

./: .gitignore  as2svg.bat  build.gradle.kts  config.gradle  settings.gradle.kts
ClientUtil/: build.gradle.kts
ClientUtil/src/main/: AndroidManifest.xml
CommonTool/: build.gradle.kts
CommonTool/src/main/resources/yaml/: fileType.yaml
CreezenAnnotation/: build.gradle.kts  settings.gradle.kts
CreezenLint/: build.gradle.kts
TJUtil/: build.gradle.kts  proguard-rules.pro
annotation/: build.gradle.kts
app/: .editorconfig  build.gradle.kts  lint.xml
app/libs/: dynamicLib-release.aar
app/src/cloud/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: shikiweb.html
app/src/main/assets/model/: androidModel.pt
app/src/main/assets/yaml/: SubjectTable.yaml
app/src/main/res/anim/: edit_activity_enter.xml  fragment_enter.xml  fragment_exit.xml  login_button_anim.xml  recycle_anim_add.xml  recycle_anim_remove.xml  recycle_item_anim.xml
app/src/main/res/animator/: login_canvas_animator.xml
app/src/main/res/drawable/: accept.xml  add.xml  add_player.xml  aganist.xml  article_edit.xml  button_background.xml  chat.xml  chat_corner.xml  checkbox_style.xml  comment.xml  corner_16.xml  corner_16_stroke.xml  corner_24.xml  corner_8.xml  (+39 more)
client_util/src/main/cpp/: nativetool.cpp
config/detekt/: detekt.yml
dynamicLib/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
issue/: build.gradle.kts
nativetool/: build.gradle.kts
nativetool/src/main/cpp/: CMakeLists.txt  nativetool.cpp
(+1013 files in other folders)
